--- a/footer.html
+++ b/footer.html
@@ -11,15 +11,18 @@
         <div class="footer-spacer">
             <div id="footer">
                 <h3>Have a question?</h3>
-                <p>Contact us<br></p>
+                <p><a href="../pages/contact.html" style="text-decoration: underline; color: black">Contact us</a><br></p>
             </div>
             <div id="footer">
                 <h3>Follow our social media.</h3>
-                <p>Youtube - Toasted Robotics<br>Instagram - @toastedrobotics</p>
+                <div style="grid-template-columns: 1fr 2fr 10px 2fr 1fr; display: grid;">
+                    <a href="https://youtube.com/channel/UCsf-2uaqZWzwzsedZvfNPKQ" style="grid-column: 2;"><img src="../static/images/youtube.webp" style="filter: invert(); max-width: 100%; height: auto;" alt="Toasted Robotics"></a>
+                    <a href="https://instagram.com/toastedrobotics" style="grid-column: 4;"><img src="../static/images/instagram.webp" style="filter: invert(); max-width: 100%; height: auto;" alt="@toastedrobotics"></a>
+                </div>
             </div>
             <div id="footer">
                 <h3>Sponsor</h3>
-                <p>Want to <b>sponsor</b> our team? <br>Check out our <strong>contact</strong> page.</p>
+                <p>Want to <b>sponsor</b> our team? <br>Check out our <strong><a href="../pages/contact.html" style="text-decoration: underline; color: black">contact</a></strong> page.</p>
             </div>
         </div>
     </div>
