--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/704131461904859227/722229352317583400/toasted_logo_curved.png">
+    <meta name="keywords" content="Toasted Robotics, 2405T, VEX, VRC, SWC, Sir Winston Churchill, Calgary, Robotics">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link rel="shortcut icon" href="../static/images/favicon.ico">
