--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
                 </div>
             </div>
             <div id="hR1">
-                <div style="grid-column: 1;">
-                    <h3>Donations</h3>
+                <div style="grid-column: 1; display: grid; grid-template-columns: 1fr 2fr 1fr; grid-template-rows: 1fr 1fr 1fr;">
+                    <h3 style="grid-column: 2; grid-row: 1;">Donations</h3>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 2; margin: 0 auto; border:none; width: 120px;">
+                        <input type="hidden" name="cmd" value="_donations" />
+                        <input type="hidden" name="business" value="VFFKSK5RMVYTS" />
+                        <input type="hidden" name="item_name" value="Toasted Robotics Donations" />
+                        <input type="hidden" name="currency_code" value="CAD" />
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+                    </form>
                 </div>
                 <div style="grid-column: 2;">
                     <h3>This Season</h3>
