--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 style="grid-column: 2; grid-row: 1;">Donations</h3>
                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 2; margin: 0 auto; border-bottom: none; width: 150px;">
                         <input type="hidden" name="cmd" value="_donations" />
-                        <input type="hidden" name="business" value="VFFKSK5RMVYTS" />
+                        <input type="hidden" name="business" value="KPJ4PFUJKZW4Y" />
                         <input type="hidden" name="item_name" value="Toasted Robotics Donations" />
                         <input type="hidden" name="currency_code" value="CAD" />
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important;" />
