--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     </div>
                 </div>
                 <div id="awards">
-                    <h2>Excellence (69)<br>Design (420)<br>Tournament Champ (666)</h2>
+                    <h2>Excellence (x)<br>Design (x)<br>Tournament Champ (x)</h2>
+                    <p style="text-align: right; padding-right: 10%; color:white; margin:0 auto;">x = placeholder</p>
                 </div>
             </div>
             <div id="hR1">
