--- a/index.html
+++ b/index.html
@@ -82,18 +82,20 @@
             <div id="hR1">
                 <div style="grid-column: 1; display: grid; grid-template-columns: 1fr 2fr 1fr; grid-template-rows: 1fr 1fr 1fr;">
                     <h3 style="grid-column: 2; grid-row: 1;">Donations</h3>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 1; padding-top: 100px; margin: 0 auto; border-bottom: none; width: 150px;">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 1; padding-top: 12vmin; margin: 0 auto; border-bottom: none; width: 150px;">
                         <input type="hidden" name="cmd" value="_donations" />
                         <input type="hidden" name="business" value="VFFKSK5RMVYTS" />
                         <input type="hidden" name="item_name" value="Toasted Robotics Donations" />
                         <input type="hidden" name="currency_code" value="CAD" />
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important;"/>
+                        <!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important;"/> -->
+                        <button name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important; border-radius: 2px; height: 5vmin; width: 15vmin; font-size: 1.3vmin; font-family: 'ubuntu', sans-serif; background-color: rgb(255, 217, 0);">Donate with Paypal</button>
                         <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
                     </form>
                     <div style="grid-column: 2; grid-row: 2;" class="gfm-embed" data-url="https://www.gofundme.com/f/help-support-vex-team-2405t/widget/medium"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
                 </div>
                 <div style="grid-column: 2;">
                     <h3>This Season</h3>
+                    <iframe src="https://www.youtube.com/embed/GlxGdI1bA8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin: 0 auto; margin-top: 13vmin ; max-width:512px; height:315px; min-width: 55%;"></iframe>
                 </div>
             </div>
             <div id="hR2"></div>
