mobile ui (home,contact)

--- a/navbar.html
+++ b/navbar.html
@@ -36,7 +36,12 @@
 				<a href="javascript:void(0);" class="icon" onclick="showNav()"><img id="maximize" src="https://cdn.discordapp.com/attachments/642547206275989527/665023672775606323/LcK7kdpki.png" width="20px" height="20px"><img id="minimize" class="hide" src="../static/images/minus.png" width="20px" height="20px"></a>
 				<div id="mobile">
 					<div id="right">
-						<div id="mobile" style="grid-column: 3; display: block;"><a href="../pages/about.html">About&nbsp;Us</a></div>
+						<div id="mobile" class="about" style="grid-column: 3; display: block;"><a href="../pages/about.html">About&nbsp;Us</a>
+							<div class="dropdown">
+								<a href="../pages/2405t.html">2405T</a>
+								<a>Our sponsors</a>
+							</div>
+						</div>
 						<div id="mobile" style="grid-column: 4; display: block;"><a href="../pages/contact.html">Contact</a></div>
 					</div>
 					<div id="left">
