--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,18 +30,18 @@
     <div class="wrapper" id="wrapper" style="grid-template-rows: 70px auto auto !important">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
         <div class="navbar" style="z-index: 1;"></div>
-        <div class="content" style="grid-template-rows: 1fr 1.6fr !important;">
+        <div class="content contact_mobile">
             <div id="backgroundpic3">
-                <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
+                <div id="contact_container">
                     <div id="contact">
                         <h1>CONTACT US</h1>
                     </div>
                 </div>
-                <div style="grid-column: 2; grid-row: 1;background-color: rgba(85, 85, 85, 0.322); ">
+                <div id="contact_container2">
                 </div>
             </div>
             <div id="cR1">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefn6k51sD0zAzTx9A_mtlrJfjKwMTngTlq17he7I1POwGVeg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" style="padding-top: 9vmin; grid-column: 2; min-height: 800px; min-width: 100%; height: auto; margin: 0 auto;">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefn6k51sD0zAzTx9A_mtlrJfjKwMTngTlq17he7I1POwGVeg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
         <div class="foot"></div>
