--- a/pages/2405t.html
+++ b/pages/2405t.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Toasted Robotics | 2405T</title>
     <meta property="og:site_name" content="Toasted Robotics">
-    <meta property="og:url" content="https://toastedrobotics.github.io/pages/about.html">
-    <meta property="og:title" content="Toasted Robotics | About">
+    <meta property="og:url" content="https://toastedrobotics.github.io/pages/2405t.html">
+    <meta property="og:title" content="Toasted Robotics | 2405T">
     <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/704131461904859227/722229352317583400/toasted_logo_curved.png">
