--- a/pages/2405t.html
+++ b/pages/2405t.html
@@ -44,16 +44,16 @@
     <div id="mask" style="z-index: 3 !important;">
         <div id="preload"></div>
     </div>
-    <div class="wrapper wrapper_mobile" id="wrapper">
+    <div class="wrapper wrapper_mobile" id="wrapper" style="">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
         <div class="navbar" style="z-index: 2;"></div>
         <div class="container">
-            <canvas class="particle"></canvas>
+            <!-- <canvas class="particle"></canvas> -->
         </div>
         <div style="grid-row: 2; grid-column: 2; height:100%; z-index: 1;">
-            <h1 id="about">&nbsp;&nbsp;About Us&nbsp;&nbsp;</h1>
+            <h1 id="about">&nbsp;&nbsp;2405T&nbsp;&nbsp;</h1>
         </div>
-        <div class="content content_mobile">
+        <div class="content" style="grid-template-rows: 2fr 3fr 2fr !important;">
             <div id="backgroundpic2">
                 <div id="team2405">
                     <h2>2405T (3388A)</h2>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div id="aR2">
+            <!-- <div id="aR2">
                 <div id="aR2C1">
                     <h3>Mission</h3>
                     <p>We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="foot"></div>
         <script>
             window.onload = function() {
