--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Toasted Robotics, 2405T, VEX, VRC, SWC, Sir Winston Churchill, Calgary, Robotics">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
-    <link rel="shortcut icon" href="../static/images/favicon.ico">
+    <link rel="shortcut icon" href="../static/images/toasted_curved.png">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script>
 		$(function(){
@@ -98,7 +98,9 @@
                     <iframe src="https://www.youtube.com/embed/GlxGdI1bA8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin: 0 auto; margin-top: 13vmin ; max-width:512px; height:315px; min-width: 55%;"></iframe>
                 </div>
             </div>
-            <div id="hR2"></div>
+            <div id="hR2">
+                <h1>WHAT IS VEX?</h1>
+            </div>
             <div id="hR3"></div>
         </div>
         <div class="foot"></div>
