--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="../static/images/favicon.ico">
+	<link rel="shortcut icon" href="../static/images/toasted_curved.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167500695-1"></script>
 	<script>
@@ -31,7 +31,7 @@
 <body>
 		<div class="navbar" id="nav">
 			<ul class="nav">
-				<li id="home" class="active"><a href="../index.html" style="grid-column: 1;"><img src="../static/images/favicon.ico" style="height:5vh; width:5vh;"></a></li>
+				<li id="home" class="active"><a href="../index.html" style="grid-column: 1;"><img src="../static/images/toasted_curved.png" style="height:5vh; width:5vh;"></a></li>
 				<div style="grid-column: 2; padding-left:1vh"><li id="home" style="padding-top:.8vh; position:sticky;"><a href="../index.html">Toasted Robotics</a></li></div>
 				<a href="javascript:void(0);" class="icon" onclick="showNav()"><img id="maximize" src="https://cdn.discordapp.com/attachments/642547206275989527/665023672775606323/LcK7kdpki.png" width="20px" height="20px"><img id="minimize" class="hide" src="../static/images/minus.png" width="20px" height="20px"></a>
 				<div id="mobile">
