--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 id="textlogoname">Toasted Robotics</h1>
             </div>
         </div>
-        <div class="content">
+        <div class="content mobilehome">
             <div id="backgroundpic">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
@@ -87,11 +87,10 @@
                         <input type="hidden" name="business" value="VFFKSK5RMVYTS" />
                         <input type="hidden" name="item_name" value="Toasted Robotics Donations" />
                         <input type="hidden" name="currency_code" value="CAD" />
-                        <!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important;"/> -->
                         <button name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="border-bottom: none !important; border-radius: 2px; height: 6vmin; width: 16vmin; font-size: 1.4vmin; font-family: 'ubuntu', sans-serif; background-color: rgb(255, 217, 0);">Donate with Paypal</button>
                         <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
                     </form>
-                    <div style="grid-column: 2; grid-row: 2;" class="gfm-embed" data-url="https://www.gofundme.com/f/help-support-vex-team-2405t/widget/medium"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
+                    <!-- <div style="grid-column: 2; grid-row: 2;" class="gfm-embed" data-url="https://www.gofundme.com/f/help-support-vex-team-2405t/widget/medium/"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script> -->
                 </div>
                 <div id="hR1C2">
                     <h3>This Season</h3>
@@ -99,7 +98,10 @@
                 </div>
             </div>
             <div id="hR2">
-                <h1>WHAT IS VEX?</h1>
+                <h1 id="hR2Desktop">WHAT IS VEX?</h1>
+                <h1 id="hR2Mobile" style="margin-top: 50vmin;">WHAT</h1>
+                <h1 id="hR2Mobile" style="font-size: 60vmin !important;">IS</h1>
+                <h1 id="hR2Mobile" style="margin-top: 5vmin; font-size: 28vmin !important;">VEX?</h1>
             </div>
             <div id="hR3"></div>
         </div>
