--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@
     <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/704131461904859227/722229352317583400/toasted_logo_curved.png">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
-    <link rel="shortcut icon" href="../static/images/favicon.ico">
+    <link rel="shortcut icon" href="../static/images/toasted_curved.png">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script>
 		$(function(){
