--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div id="hR1">
                 <div id="hR1C1">
                     <h3 style="grid-column: 2; grid-row: 1;">Donations</h3>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 1; padding-top: 12vmin; margin: 0 auto; border-bottom: none;">
+                    <h1 style="grid-column: 2; grid-row: 2;">Please support us by donating!</h1>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="grid-column: 2; grid-row: 2; padding-top: 12vmin; margin: 0 auto; border-bottom: none;">
                         <input type="hidden" name="cmd" value="_donations" />
                         <input type="hidden" name="business" value="VFFKSK5RMVYTS" />
                         <input type="hidden" name="item_name" value="Toasted Robotics Donations" />
