--- a/navbar.html
+++ b/navbar.html
@@ -33,6 +33,7 @@
 			<ul class="nav">
 				<li id="home" class="active"><a href="../index.html" style="grid-column: 1;"><img src="../static/images/toasted_curved.png" style="height:5vh; width:5vh;"></a></li>
 				<div style="grid-column: 2; padding-left:1vh"><li id="home" style="padding-top:.8vh; position:sticky;"><a href="../index.html">Toasted Robotics</a></li></div>
+				<!-- <div style="grid-column: 3; padding-left:1vh"><li id="home" style="padding-top:.8vh; position:sticky;"><a href="../index.html">NEO Robotics</a></li></div> -->
 				<a href="javascript:void(0);" class="icon" onclick="showNav()"><img id="maximize" src="https://cdn.discordapp.com/attachments/642547206275989527/665023672775606323/LcK7kdpki.png" width="20px" height="20px"><img id="minimize" class="hide" src="../static/images/minus.png" width="20px" height="20px"></a>
 				<div id="mobile">
 					<div id="right">
