--- a/navbar.html
+++ b/navbar.html
@@ -39,6 +39,7 @@
 						<div id="mobile" class="about" style="grid-column: 3; display: block;"><a href="../pages/about.html">About&nbsp;Us</a>
 							<div class="dropdown">
 								<a href="../pages/2405t.html">2405T</a>
+								<a href="../pages/2405k.html">2405K</a>
 								<a href="../pages/sponsors.html">Our sponsors</a>
 							</div>
 						</div>
